--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -8,11 +8,11 @@
     margin-left: 10vw;
     margin-right: 10vw;
     width: 80vw;
-    padding: 30px;
+    padding: .15vw;
 }
 
 #header{
-    font-size: 60px;
+    font-size: 4vw;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
 }
