--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -27,14 +27,14 @@
     text-align: justify;
     line-height: 35px;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 30px;
+    font-size: 1.5vw;
 }
 
 #name{
     text-align: center;
-    font-size: 60px;
+    font-size: 4vw;
     font-family: 'Times New Roman', Times, serif;
-    margin-top: 20px;
+    margin-top: 1vw;
 }
 
 .logo{
@@ -50,7 +50,7 @@
     text-align: right;
     color: #F15025;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 30px;
+    font-size: 1.5vw;
 }
 
 a{
